tests/query_errors/node_reserved_name_operator/error.txt
Error: 
    1 | define operator counter from generic::counter;
    2 | create operator out from counter;
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Name `out` is already in use for another node, please use another name.
    3 | 
    4 | select event from in into out;